--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,9 @@
-<p>
-  login works!
-</p>
+
+<div class="container row flex-center">
+  <form class="container column">
+    <h1>Login</h1>
+    <md-input placeholder="email"></md-input>
+    <md-input placeholder="password" type="password"></md-input>
+    <button md-raised-button color="primary">LOGIN</button>
+  </form>
+</div>
