add custom theme, setup sass, use a less ugly font

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,8 +1,13 @@
-h1 {
-    text-align: center;
-}
 
 form {
     flex: 1;
     max-width: 500px;
+}
+
+.main {
+    height: 100%;
+}
+
+form  {
+    margin-bottom: 5em;
 }
