--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="container flex-center">
+<div class="container main flex-center">
   <form class="container column">
     <h1>Login</h1>
     <legend>u: admin@example.com p: Password1</legend>
