--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+/*@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';*/
+@import './theme.scss';
 
+html, body {
+    height: 100%;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 .container {
     display: flex;
+    padding: 10px;
 }
 
 .container.row {
